Remove unneeded plugin