@@ -17,19 +17,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.1</version>
-                <configuration>
-                    <mainClass>eu.jangos.extractorfx.StartingMain</mainClass>
-                    <options>
-                        <option>--add-exports</option>
-                        <option>javafx.base/com.sun.javafx.runtime=controlsfx</option>
-                    </options>
-                    <commandlineArgs>--wowpath="D:\Downloads\WOW-NOSTALGEEK\WOW-NOSTALGEEK\Data"</commandlineArgs>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
